# agentic-golden-set-demo

./: .env.example  .envrc-example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  working_memory.md
scripts/: check_search.py  check_tool_outputs.py  dashboard.py  download_wands.py  generate_qr.py  load_weaviate.py  run_agent.py  test_search.py
src/goldendemo/: config.py
src/goldendemo/agent/: __init__.py  agent.py  constants.py  errors.py  events.py  judge.py  prompts.py  runtime.py  state.py  utils.py  validator.py
src/goldendemo/agent/guardrails/: __init__.py  base.py  category_browsing.py  distribution.py  exploration.py  iteration.py
src/goldendemo/agent/tools/: __init__.py  base.py  browse.py  details.py  finish.py  plan.py  search.py  submit.py
src/goldendemo/clients/: weaviate_client.py
src/goldendemo/data/: models.py  wands_loader.py
src/goldendemo/evaluation/: __init__.py  comparator.py
tests/: conftest.py  test_agent_events.py  test_agent_state.py  test_agent_tools.py  test_guardrails.py  test_models.py  test_utils.py  test_validator.py  test_wands_loader.py  test_weaviate_client.py
