[tool.poetry]
name = "agentic-golden-set-demo"
version = "0.1.0"
description = "Public demo of agentic golden set generation for search relevance using WANDS dataset"
authors = ["David Fennessey"]
readme = "README.md"
license = "MIT"
packages = [{include = "goldendemo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.52.0"
openai = "^2.14.0"
weaviate-client = "^4.19.2"
pandas = "^2.3.3"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
scikit-learn = "^1.8.0"
plotly = "^6.5.0"
httpx = "^0.28.1"
python-dotenv = "^1.2.1"
pandas-stubs = "==2.3.3.251219"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
ruff = "^0.14.10"
mypy = "^1.19.1"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require external services)",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
